--- a/resultado.html
+++ b/resultado.html
@@ -31,8 +31,8 @@
               <a class="btn btn-outline-success mb-4" href="resultado.html" type="button">Resultado</a>
             </form>
           </nav>   
-        <h1 class="text-center mt-4 mb-4">Resultado</h1>
-        <div class="container justify-content-center">
+        <h2 class="text-center mt-4 mb-4">Resultado</h2>
+        <div class="container justify-content-center mb-2" style="border-style: solid;">
             <table class="table caption-top">
                 <caption style="color: black; font-size: 2rem;" class="mt-3 mb-3 text-center">Primeira tabela</caption>
                 <thead>
@@ -65,7 +65,7 @@
                 </tbody>
               </table>
         </div>
-        <div class="container justify-content-center">
+        <div class="container justify-content-center" style="border-style: solid;">
             <table class="table caption-top">
                 <caption style="color: black; font-size: 2rem;" class="mt-3 mb-3 text-center">Segunda tabela</caption>
                 <thead>
@@ -97,7 +97,10 @@
                   </tr>
                 </tbody>
               </table>
-        </div>         
+        </div>
+        <form class="container text-center mt-4">
+          <input class="btn btn-primary" type="button" value="Imprimir / PDF" onclick="window.print()"/>
+        </form>        
         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
