ajuste no botão imprimir

--- a/resultado.html
+++ b/resultado.html
@@ -98,8 +98,8 @@
                 </tbody>
               </table>
         </div>
-        <form class="container text-center mt-4">
-          <input class="btn btn-primary" type="button" value="Imprimir / PDF" onclick="window.print()"/>
+        <form class="container text-center mt-4 mb-5">
+          <input class="btn btn-primary " type="button" value="Imprimir / PDF" onclick="window.print()"/>
         </form>        
         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
