--- a/resultado.html
+++ b/resultado.html
@@ -10,25 +10,19 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-light bg-light">
-        <div class=" justify-content-center container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="img/CEGEP_LOGO.png" alt="" width="250"  class="d-inline-block align-top">
-          </a>
-        </div>
-      </nav>
-            <nav class="navbar navbar-light bg-light">
-                <div class="justify-content-center container-fluid">
-                  <span style="color: black; font-size: 2rem;" class="navbar-text">
-                  </span>
-                </div>
-              </nav>
-        </header>
+        <nav class="navbar navbar-light">
+          <div class=" justify-content-center container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="img/CEGEP_LOGO.png" alt="" width="250"  class="d-inline-block align-top">
+            </a>
+          </div>
+        </nav>
+    </header>
     <main>
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-light">
             <form class="container-fluid justify-content-center">
-              <a class="btn btn-outline-success mb-4 me-4" href="index.html" type="button">Início</a>
-              <a class="btn btn-outline-success mb-4" href="resultado.html" type="button">Resultado</a>
+              <a class="btn btn-primary mb-4 me-4" href="index.html" type="button">Início</a>
+              <a class="btn btn-primary mb-4" href="resultado.html" type="button">Resultado</a>
             </form>
           </nav>   
         <h2 class="text-center mt-4 mb-4">Resultado</h2>
