--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@
             </form>
           </nav>   
     </main>
+    <div class="container">
+      <h2 class="text-center mb-5">Calculo do RGPS</h2>
+      <div class="row">
+        <div class="col-sm text-center">
+          <p class="botao_coletar">Digite o valor da base do RGPS:</p><input type="number" name="Base_Rgps" id="Base_Rgps">
+        </div>
+        <div class="col-sm text-center">
+          <p class="botao_coletar">Digite o valor da patronal RGPS:</p><input type="number" id="Base_Rgps">
+        </div>
+        <div class="col-sm text-center">
+          <p class="botao_coletar">Digite o valor da funcional RGPS:</p><input type="number" id="Base_Rgps">
+        </div>
+        <div class="col-sm text-center">
+          <p class="botao_coletar">Digite o valor da benefício RGPS:</p><input type="number" id="Base_Rgps">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <h2 class="text-center mt-5 mb-5">Calculo do RPPS</h2>
+      <div class="row">
+        <div class="col-sm text-center">
+          <p class="botao_coletar">Digite o valor da base do RPPS:</p><input type="number" id="Base_Rgps">
+        </div>
+        <div class="col-sm text-center">
+          <p class="botao_coletar">Digite o valor da patronal RPPS:</p><input type="number" id="Base_Rgps">
+        </div>
+        <div class="col-sm text-center">
+          <p class="botao_coletar">Digite o valor da funcional RPPS:</p><input type="number" id="Base_Rgps">
+        </div>
+        <div class="col-sm text-center">
+          <p class="botao_coletar">Digite o valor da benefício RPPS:</p><input type="number" id="Base_Rgps">
+        </div>
+      </div>
+    </div>
+    <script src="js/main.js"></script>
+    <div class="container text-center mt-5">
+    <button class="text-center btn btn-primary" type="button" onclick="coletar()" id="">Coletar</button>
+    </div>
+    <di id="res" class="text-center">Resultado</p></di>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 </html>
