--- a/resultado.html
+++ b/resultado.html
@@ -7,12 +7,13 @@
     <title>Coletor de Dados Previdenciário</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="/index.html">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-light">
           <div class=" justify-content-center container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
               <img src="img/CEGEP_LOGO.png" alt="" width="250"  class="d-inline-block align-top">
             </a>
           </div>
@@ -25,36 +26,39 @@
               <a class="btn btn-primary mb-4" href="resultado.html" type="button">Resultado</a>
             </form>
           </nav>   
-        <h2 class="text-center mt-4 mb-4">Resultado</h2>
+        <h2 class="text-center mb-4">Resultado</h2>
         <div class="container justify-content-center mb-2" style="border-style: solid;">
             <table class="table caption-top">
                 <caption style="color: black; font-size: 2rem;" class="mt-3 mb-3 text-center">Primeira tabela</caption>
-                <thead>
+                <thead class="text-center">
                   <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Tipo</th>
+                    <th scope="col">Bs.Calculo</th>
+                    <th scope="col">Vl.Remuneratório</th>
+                    <th scope="col">Vl.Devido</th>
+                    <th scope="col">Vl.Contabilizado</th>
+                    <th scope="col">Vl.Benef.Direto</th>
+                    <th scope="col">Vl.Recolhido</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
+                    <th scope="row">RGPS</th>
+                    <td id="res" class="text-center">txt</td>
+                    <td class="text-center"><div id="res">Resultado</div></td>
+                    <td class="text-center">0000</td>
+                    <td class="text-center">0000</td>
+                    <td class="text-center">0000</td>
+                    <td class="text-center">0000</td>
                   </tr>
                   <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
+                    <th scope="row">RPPS</th>
+                    <td class="text-center">0000</td>
+                    <td class="text-center">0000</td>
+                    <td class="text-center">0000</td>
+                    <td class="text-center">0000</td>
+                    <td class="text-center">0000</td>
+                    <td class="text-center">0000</td>
                   </tr>
                 </tbody>
               </table>
@@ -64,30 +68,30 @@
                 <caption style="color: black; font-size: 2rem;" class="mt-3 mb-3 text-center">Segunda tabela</caption>
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Tipo</th>
+                    <th scope="col">Bs.Calculo</th>
+                    <th scope="col">Vl.Retido</th>
+                    <th scope="col">Vl.Contabilizado</th>
+                    <th scope="col">Vl.Recolhido.Principal</th>
                     <th scope="col">Handle</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
+                    <th scope="row">RGPS</th>
+                    <td>0000</td>
+                    <td>0000</td>
+                    <td>0000</td>
+                    <td>0000</td>
+                    <td>0000</td>
                   </tr>
                   <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
+                    <th scope="row">RPPS</th>
+                    <td>0000</td>
+                    <td>0000</td>
+                    <td>0000</td>
+                    <td>0000</td>
+                    <td>0000</td>
                   </tr>
                 </tbody>
               </table>
@@ -96,6 +100,8 @@
           <input class="btn btn-primary " type="button" value="Imprimir / PDF" onclick="window.print()"/>
         </form>        
         </main>
+        <div id="res">Resultado</div>
+        <script src="/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 </html>
