--- a/index.html
+++ b/index.html
@@ -19,52 +19,122 @@
     </nav>
     </header>
     <main>
-        <nav class="navbar navbar-light">
-            <form class="container-fluid justify-content-center">
-              <a class="btn btn-primary mb-4 me-4" href="index.html" type="button">Início</a>
-              <a class="btn btn-primary mb-4" href="resultado.html" type="button">Resultado</a>
-            </form>
-          </nav>   
+          <section class="coletor container mt-1">
+            <div class="container">
+              <h2 class="text-center mb-4 mt-3">Calculo do RGPS</h2>
+              <div class="row">
+                <div class="col-sm text-center">
+                  <p class="botao_coletar">Digite o valor da base do RGPS: </p><input type="number" name="Base_Rgps" id="Base_Rgps">
+                </div>
+                <div class="col-sm text-center ">
+                  <p class="botao_coletar">Digite o valor da patronal RGPS: </p><input type="number" name="Patronal_Rgps" id="Patronal_Rgps">
+                </div>
+                <div class="col-sm text-center">
+                  <p class="botao_coletar">Digite o valor da funcional RGPS: </p><input type="number" name="Funcional_Rgps" id="Funcional_Rgps">
+                </div>
+                <div class="col-sm text-center">
+                  <p class="botao_coletar">Digite o valor da benefício RGPS:</p><input type="number" name="Benefício_Rgps"id="Benefício_Rgps">
+                </div>
+              </div>
+            </div>
+            <div class="container">
+              <h2 class="text-center mt-4 mb-4">Calculo do RPPS</h2>
+              <div class="row">
+                <div class="col-sm text-center">
+                  <p class="botao_coletar">Digite o valor da base do RPPS:</p><input type="number" name="Base_Rpps" id="Base_Rpps">
+                </div>
+                <div class="col-sm text-center">
+                  <p class="botao_coletar">Digite o valor da patronal RPPS:</p><input type="number" id="Base_Rgps">
+                </div>
+                <div class="col-sm text-center">
+                  <p class="botao_coletar">Digite o valor da funcional RPPS:</p><input type="number" id="Base_Rgps">
+                </div>
+                <div class="col-sm text-center">
+                  <p class="botao_coletar">Digite o valor da benefício RPPS:</p><input type="number" id="Base_Rgps">
+                </div>
+              </div>
+            </div>
+            <div class="container text-center mt-4">
+              <button class="text-center btn btn-primary mb-3" type="button" onclick="coletar()" id="">Coletar</button>
+              </div>
+          </section>
+          <section id="tabelas">
+            <h2 class="text-center mb-4 mt-4">Resultado</h2>
+            <div class="container justify-content-center mb-2" style="border-style: solid;">
+                <table class="table caption-top">
+                    <caption style="color: black; font-size: 2rem;" class="mt-3 mb-3 text-center">Primeira tabela</caption>
+                    <thead class="text-center">
+                      <tr>
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Bs.Calculo</th>
+                        <th scope="col">Vl.Remuneratório</th>
+                        <th scope="col">Vl.Devido</th>
+                        <th scope="col">Vl.Contabilizado</th>
+                        <th scope="col">Vl.Benef.Direto</th>
+                        <th scope="col">Vl.Recolhido</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th class="text-center" scope="row">RGPS</th>
+                        <td id="vsl_base_rgps" class="text-center">0000</td>
+                        <td id="vsl_patronal_rgps" class="text-center">0000</td>
+                        <td id="vsl_funcional_rgps" class="text-center">0000</td>
+                        <td id="vsl_benefício_rgps" class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                      </tr>
+                      <tr>
+                        <th class="text-center" scope="row">RPPS</th>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+            <div class="container justify-content-center" style="border-style: solid;">
+                <table class="table caption-top">
+                    <caption style="color: black; font-size: 2rem;" class="mt-3 mb-3 text-center">Segunda tabela</caption>
+                    <thead class="text-center">
+                      <tr>
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Bs.Calculo</th>
+                        <th scope="col">Vl.Retido</th>
+                        <th scope="col">Vl.Contabilizado</th>
+                        <th scope="col">Vl.Recolhido.Principal</th>
+                        <th scope="col">Handle</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th class="text-center" scope="row">RGPS</th>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                      </tr>
+                      <tr>
+                        <th class="text-center" scope="row">RPPS</th>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                        <td class="text-center">0000</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+            <form class="container text-center mt-4 mb-5">
+              <input class="btn btn-primary " type="button" value="Imprimir / PDF" onclick="printDiv('tabelas')"/>
+            </form> 
+          </section>  
     </main>
-    <div class="container">
-      <h2 class="text-center mb-5">Calculo do RGPS</h2>
-      <div class="row">
-        <div class="col-sm text-center">
-          <p class="botao_coletar">Digite o valor da base do RGPS:</p><input type="number" name="Base_Rgps" id="Base_Rgps">
-        </div>
-        <div class="col-sm text-center">
-          <p class="botao_coletar">Digite o valor da patronal RGPS:</p><input type="number" id="Base_Rgps">
-        </div>
-        <div class="col-sm text-center">
-          <p class="botao_coletar">Digite o valor da funcional RGPS:</p><input type="number" id="Base_Rgps">
-        </div>
-        <div class="col-sm text-center">
-          <p class="botao_coletar">Digite o valor da benefício RGPS:</p><input type="number" id="Base_Rgps">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <h2 class="text-center mt-5 mb-5">Calculo do RPPS</h2>
-      <div class="row">
-        <div class="col-sm text-center">
-          <p class="botao_coletar">Digite o valor da base do RPPS:</p><input type="number" id="Base_Rgps">
-        </div>
-        <div class="col-sm text-center">
-          <p class="botao_coletar">Digite o valor da patronal RPPS:</p><input type="number" id="Base_Rgps">
-        </div>
-        <div class="col-sm text-center">
-          <p class="botao_coletar">Digite o valor da funcional RPPS:</p><input type="number" id="Base_Rgps">
-        </div>
-        <div class="col-sm text-center">
-          <p class="botao_coletar">Digite o valor da benefício RPPS:</p><input type="number" id="Base_Rgps">
-        </div>
-      </div>
-    </div>
-    <script src="js/main.js"></script>
-    <div class="container text-center mt-5">
-    <button class="text-center btn btn-primary" type="button" onclick="coletar()" id="">Coletar</button>
-    </div>
-    <di id="res" class="text-center">Resultado</p></di>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 </html>
