--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Coletor de Dados Previdenciário</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,41 +25,42 @@
     <main>
           <section class="coletor container mt-1">
             <div class="container">
-              <h2 class="text-center mb-4 mt-3">Calculo do RGPS</h2>
+              <h1 class="text-center mb-4 mt-3">Calculo do RGPS</h1>
               <div class="row">
-                <div class="col-sm text-center">
-                  <p class="botao_coletar">Digite o valor da base do RGPS: </p><input type="number" name="Base_Rgps" id="Base_Rgps">
+                <div class="col-xs-1 text-center">
+                  <p class="botao_coletar">Digite o valor da Base do RGPS: </p><input class="ajuste_campo" type="number" name="Base_Rgps" id="Base_Rgps">
                 </div>
-                <div class="col-sm text-center ">
-                  <p class="botao_coletar">Digite o valor da patronal RGPS: </p><input type="number" name="Patronal_Rgps" id="Patronal_Rgps">
+                <div class="col-xs-1 text-center ">
+                  <p class="botao_coletar">Digite o valor da patronal RGPS: </p><input class="ajuste_campo" type="number" name="Patronal_Rgps" id="Patronal_Rgps">
                 </div>
-                <div class="col-sm text-center">
-                  <p class="botao_coletar">Digite o valor da funcional RGPS: </p><input type="number" name="Funcional_Rgps" id="Funcional_Rgps">
+                <div class="col-xs-1 text-center">
+                  <p class="botao_coletar">Digite o valor da funcional RGPS: </p><input class="ajuste_campo" type="number" name="Funcional_Rgps" id="Funcional_Rgps">
                 </div>
-                <div class="col-sm text-center">
-                  <p class="botao_coletar">Digite o valor da benefício RGPS:</p><input type="number" name="Benefício_Rgps"id="Benefício_Rgps">
+                <div class="col-xs-1 text-center">
+                  <p class="botao_coletar">Digite o valor da benefício RGPS: </p><input class="ajuste_campo" type="number" name="Benefício_Rgps"id="Benefício_Rgps">
                 </div>
               </div>
             </div>
             <div class="container">
-              <h2 class="text-center mt-4 mb-4">Calculo do RPPS</h2>
+              <h1 class="text-center mt-4 mb-4">Calculo do RPPS</h1>
               <div class="row">
-                <div class="col-sm text-center">
-                  <p class="botao_coletar">Digite o valor da base do RPPS:</p><input type="number" name="Base_Rpps" id="Base_Rpps">
+                <div class="col-xs-1 text-center">
+                  <p class="botao_coletar">Digite o valor da base do RPPS:</p><input class="ajuste_campo" type="number" name="Base_Rpps" id="Base_Rpps">
                 </div>
-                <div class="col-sm text-center">
-                  <p class="botao_coletar">Digite o valor da patronal RPPS:</p><input type="number" id="Base_Rgps">
+                <div class="col-xs-1 text-center">
+                  <p class="botao_coletar">Digite o valor da patronal RPPS:</p><input class="ajuste_campo" type="number" id="Base_Rgps">
                 </div>
-                <div class="col-sm text-center">
-                  <p class="botao_coletar">Digite o valor da funcional RPPS:</p><input type="number" id="Base_Rgps">
+                <div class="col-xs-1 text-center">
+                  <p class="botao_coletar">Digite o valor da funcional RPPS:</p><input class="ajuste_campo" type="number" id="Base_Rgps">
                 </div>
-                <div class="col-sm text-center">
-                  <p class="botao_coletar">Digite o valor da benefício RPPS:</p><input type="number" id="Base_Rgps">
+                <div class="col-xs-1 text-center">
+                  <p class="botao_coletar">Digite o valor da benefício RPPS:</p><input class="ajuste_campo" type="number" id="Base_Rgps">
                 </div>
               </div>
             </div>
             <div class="container text-center mt-4">
               <button class="text-center btn btn-primary mb-3" type="button" onclick="coletar()" id="">Coletar</button>
+              <button class="btn btn-primary mb-3" onClick="window.location.reload();">Resetar</button>
               </div>
           </section>
           <section id="tabelas">
