Ajustando botão print mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     </header>
     <main>
-          <section class="coletor container mt-1">
+          <section class="container mt-1">
             <div class="container">
               <h1 class="text-center mb-4 mt-3">Calculo do RGPS</h1>
               <div class="row">
